# STT

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  __main__.py  transcribe.py  utils.py
